lots of big changes, restructured api calls, added css transitions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Artisearch</title>
     </head>
     <body style="height: 100%">
-        <div id="root"></div>
+        <div id="root" class="p-0 sm:p-4"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
