--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="/artisearch.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Artisearch</title>
     </head>
-    <body class="h-dvh">
-        <div id="root" class="p-0 sm:p-4"></div>
+    <body class="h-svh">
+        <div id="root" class="p-0 sm:p-4 md:p-0"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
